--- a/index.html
+++ b/index.html
@@ -2,32 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Stats preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <main>
+      <div class="card-image">
+        <img src="images/image-header-desktop.jpg" id="card-image-desktop">
+        <img src="images/image-header-mobile.jpg" id="card-image-mobile">
+      </div>
+      <div class="card-content">
+        <h1>Get <span>insights</span> that help your business grow.</h1>
+          <p>
+            Discover the benefits of data analytics and make better decisions regarding revenue, customer
+            experience, and overall efficiency.
+          </p>
+          <!-- probably had a better way to do this ¯\_(ツ)_/¯ -->
+          <div class="card-content-stats">
+            <div class="stats-value-container">
+              <span class="card-content-stats-value">10k+</span> <br>
+              <span class="card-content-stats-title">companies</span>
+            </div>
+            <div class="stats-value-container">
+              <span class="card-content-stats-value">314</span> <br>
+              <span class="card-content-stats-title">templates</span>
+            </div>
+            <div class="stats-value-container">
+              <span class="card-content-stats-value">12m+</span> <br>
+              <span class="card-content-stats-title">queries</span>
+            </div>
+            </main>
+          </div>
+          </main>
+      </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Murilo Monte</a>.
+    </div>
 </body>
 </html>
